--- a/intro/01_structure.mdx
+++ b/intro/01_structure.mdx
@@ -2,51 +2,78 @@
 title: "Project Structure"
 ---
 
-As a Flask developer you will immediately notice familiar patterns in the ./backend folder:
-- static holds your CSS and js
-- templates holds your HTML which is rendered by Jinja
-a (link to whitepaper). These allow us to inject
-information directly into our HTML (and even JS), which allows for SSR (Serverside Rendering) just 
-like Next
+Let's start with the big picture: the project structure.
 
-# Screenshot of folder
-
-Also inside our backend folder are
+Open the ``backend`` folder.
+As a Flask developer you will immediately see a familiar pattern:
+- a ``static`` folder holding your CSS and JS
+- a ``templates`` with your HTML Jinja templates
 - our Flask application in ``app.py``
-- blueprints and other Python files
-- (This one you need to create) ``.env`` file to store secrets
-- a ``requirements.txt`` file
+- a ``requirements.txt`` file for our python dependencies
 - a ``gunicorn_config.py`` file which configures our Gunicorn WSGI
 - a Dockerfile to containarize the application for easier development and deployment
 
-Inside our static folder we see another familiar pattern, this time for JavaScript developers: src (source) and
+One thing is missing though: the ``.env`` file. Create one in the ``backend`` folder, we will fill it
+throughout the documentation.
+
+If you open the ``static`` we see another familiar pattern: src (source) and
 dist (distination). When bundling our JavaScript, the raw code is being transpiled into a clean bundle and 
 copied from src to dist. After that we can simply import it into our HTML just like any other JavaScript.
 
-# Screenshot of HTML 
+```html landing.html
+<script src="{{ url_for('static', filename='dist/landing.js') }}" defer></script>
+```
 
-Well how do we do it? For that open ``bundle.js`` in our root directory. Here we can see how Bun
-tracks certain JavaScript files and bundles them into our dist directory while keeping the same name.
+How is it done? Open ``bundle.js`` in our root directory. Here we can see how Bun
+tracks defined JavaScript files and creates bundles with the same name.
 
-# Code Snippet of bundle.js
+```js bundle.js
+await Bun.build({
+    entrypoints: [
+        "./backend/static/source/authenticated_home.js", 
+        "./backend/static/source/payed_home.js", 
+        "./backend/static/source/landing.js"
+    ],
+    outdir: "./backend/static/dist/",
+})
+```
+Try executing this file with ``bun build.js``. 
+It is also defined as a script in our ``package.json`` and can be ran using ``bun run build``.
 
-You can try this by simply running this file with ``bun build.js``. However, this is also defined as a
-script in our ``package.json`` and can be run using ``bun run build``.
-
-# Screenshot of scripts
+```json package.json
+  "scripts": {
+    "build": "bun build.js",
+    "tailwind": "bunx tailwindcss -i ./backend/static/source/globals.css -o ./backend/static/dist/tailwind.css",
+    "watch-tailwind": "bunx tailwindcss -i ./backend/static/source/globals.css -o ./backend/static/dist/tailwind.css --watch"
+  },
+```
  
 In here you also see another command: tailwind. By calling ``bun run tailwind`` we can transpile our
-``globals.css`` file to create an ``output.css`` files which is imported in our ``_base.html``. Since
-this is our Base Template, this CSS file is present in every other HTML file that inherits from it. The
-Configuration for out Tailwind is done in ``tailwind.config.js`` in root. Here we can see that Tailwind 
-scans our Templates for HTML and our Static for JS to only add classes that are actually used. On a side 
-note: The globals.css also holds custom defined CSS, this is also added and applied.
+``globals.css`` file to create ``output.css`` .
 
-# Screenshot of tailwind.config.js
+It is imported in our ``_base.html``, snce this is our Base Template, ``output.css`` is used in HTML file 
+that inherits from it. 
 
-Another thing you might notice is the nginx folder. This holds all the Configuration 
-for our web server. At the root you can see another Dockerfile which is used for Nginx.
-What is does besides setting up, is copying the static folder and serving it through Nginx
+Open ``tailwind.config.js`` in root. Here we can see that Tailwind scans our ``backend/templates`` folder for HTML and
+``backend/static/source`` for JS, for tracking which classes are used and only including them in the output file. 
+On a side note: ``globals.css`` also holds custom defined CSS for styling most of ``base.html``.
+
+``` js, tailwind.config.js
+/** @type {import('tailwindcss').Config} */
+module.exports = {
+  content: [
+    "./backend/static/source/**/*.{js,jsx,ts,tsx}",
+    "./backend/templates/**/*.{html}"
+  ],
+}
+```
+
+Another thing you might notice is the ``nginx`` folder, which holds all the Configuration for our web server. 
+At the root you can see the Dockerfile for that.
+When building, Docker copies the static files and serves them through Nginx
 instead of our Flask application, since this is way more efficient.
 
-The ``docker-compose.yml`` is a way of managing multiple containers and their interactions.
+Besides that we have a ``docker-compose.yml`` and ``serverless.yml`` file, you will learn about them in our deployment 
+chapters.
+
+# here something about the email folder we will hopefully have
