--- a/intro/02_installation.mdx
+++ b/intro/02_installation.mdx
@@ -3,36 +3,33 @@ title: "Installation / Setup"
 ---
 
 ### Requirements
+While developing you will need:
+- [Bun](https://bun.sh/docs/installation)
+- [Python](https://www.python.org/downloads/)
+- [Stripe CLI](https://docs.stripe.com/stripe-cli)
 
-Something everyone will have to install is
-- Bun
-- Python
-- Bash
-
-For deployment you will need
-- Docker
-- AWS-CLI
-- Serverless CLI
-- Stripe CLI
+For deployment install:
+- [Docker](https://docs.docker.com/get-docker/)
+- [AWS-CLI](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html)
+- [Serverless CLI](https://www.serverless.com/framework/docs-getting-started)
 
 
 ### Running the application
-Almost done, before we start, we need to bundle our static files, 
-since these are not tracked by git which means they will be missing after
-a fresh pull.
-For that we can run
+Almost done, before we start, we will need to bundle our static files.
+Since they are not tracked by git you will have to run this after a fresh pull:
 - ``bun run build`` for JS
 - ``bun run tailwind`` for CSS
 
-After that we are ready to start: 
-- ``bash local.sh`` will start a local (DEVELOPMENT!) server and host it on Port 8080
-or
-- ``bash docker.sh`` which will run the same application with a proper webserver, this is slow - use 
-local if possible
 
-Unfortunately there is just a bit more configuration to do before we start:
-- Setup and connect our DynamoDB database on AWS (or locally)
-- Connect Github so User's can authenticate
-- Configure our application to be used a webhook for Stripe
+Once we are done with configuration, you will have two choices to start the app:
+- WHEN WORKING LOCALLY: ``bash local.sh`` will start a local (!DEVELOPMENT!) server which listens on Port 8080
+or
+- WHEN DEPLOYING: ``bash docker.sh`` will run the same application with production ready Nginx
+
+Before we can do that, there is just a bit more configuration to do:
+- Setup and connect our database
+- Configure Stripe
+- Create an OAuth application for authentification
+- setup emails
 
 Continue reading the next section to learn how to do this
