--- a/main/00_authentication.mdx
+++ b/main/00_authentication.mdx
@@ -11,21 +11,21 @@ which allows the server to authenticate the user since it now knows who he is.
 Now the next logical step would be to build a simple email login page and do this manually, but we don't.
 Instead we use OAuth: the user logs in with another provider like Google or GitHub with their existing
 accounts. The provider then generates the token themselves and gives it to us, so we can access information
-about the user like his email. Why do we do this? Well, originally this was a way for app-developers to
+about the user like his email. Why do we do this? Well, originally OAUTH was created for app-developers to
 perform actions on behalf of a user, learn more in [this 5 minute video](https://www.youtube.com/watch?v=KT8ybowdyr0).
-However, another emergent benefit is the user experience: it is much easier to have one Google account which
-you use to login everywhere else instead of a separate account.
+However, the main selling point is the user experience: it is much easier to have one Google account which
+you use to login everywhere instead of creating hundrets of separate accounts.
 
 
-How do we do this? First we need to create a new application at an OAuth provider like in our case GitHub and 
+How does this work? First we need to create a new application at an OAuth provider like in our case GitHub and 
 configure a callback adress. This is where the user will be sent once he is done logging in. 
 For GitHub follow [this video](...) and use ``http://localhost/**`` for local development or your domain name
 once you have deployed your application.
 
 
-For practicality we will use the ``auth_lib`` library. Open ``app.py`` and scroll down to:
-```python app.py
-# --- OAuth ---
+Open ``bp_auth.py```:
+```python bp_auth.py
+# --- OAuth setup ---
 CLIENT_ID = os.getenv("GITHUB_CLIENT_ID")
 CLIENT_SECRET = os.getenv("GITHUB_CLIENT_SECRET")
 
@@ -44,12 +44,12 @@ github = oauth.register(
 ```
 
 Here you can see that we load the "GITHUB_CLIENT_ID" and "GITHUB_CLIENT_SECRET" from our envrionment variables.
-Get them from your GitHub application and add them to the ``.env`` file.
+Get them from your GitHub application overview and add them to our ``.env`` file.
 
 Now let's look at the routes managing the authentication. If a user tries to access a route, which he is not authorized to 
-use, or manually clicks the sign-up button, he will be redirecte to "/authenticate".
+use, or manually clicks the sign-up button, he will be redirected to "/authenticate".
 
-```python app.py
+```python bp_auth.py
 @app.get("/authenticate")
 def signupRoute():
     next = request.args.get("next", "")
@@ -57,16 +57,16 @@ def signupRoute():
     return github.authorize_redirect(f"{request.host_url}callback{f'?next={next}' if next else ''}")
 ``` 
 
-From here he is redirected to GitHub using the ``authorize_redirect`` function. To it, we pass a callback URL, which
-consists of our host, the "/callback" route and a "next" query parameter which signifies where the user was planning to
-go originally. This callback URL HAS to match the pattern, that we provided in our OAuth application settings, since GitHub
+From here he is once againredirected to GitHub using the ``authorize_redirect`` function. To it, we pass a callback URL, which
+consists of our host, the "/callback" route and a "next" query parameter which displays where the user was planning to
+go originally. This callback URL *HAS* to match the pattern, that we provided in our OAuth application settings, since GitHub
 doesn't want the user to be sent to malicious sites, if the secret keys are compromised.
 
-As you might imagine, once the user has logged in, he is redirected to our "/callback" route. Note, that besides the "next"
-query parameter we provided, GitHub also added a "code" one. This is a token which, together with the client secret we can
-exchange for an access token. This access token is like an API key and allows us to query data about the user like his email.
+Once the user has logged in, he is redirected to our "/callback" route. Note, that besides the "next"
+query parameter we provided, GitHub also added a "code" one. This is a token which, together with the client secret, we can
+exchange for an access token. This access token is "like an API key" and allows us to fetch data about the user like his email.
 
-```python app.py
+```python bp_auth.py
 @app.get("/callback")
 def callbackRoute():
     next = request.args.get("next", "/home/authed")
@@ -79,7 +79,7 @@ def callbackRoute():
         session["access_token"] = access_token
 
         user_info = get_user_info(access_token)
-        email = user_info["login"] 
+        email = user_info[0]["email"] 
         session["email"] = email
 
         info_log(f"Signing in user with email {email}")
@@ -125,7 +125,7 @@ def get_user_info(access_token):
             "Accept": "application/vnd.github.v3+json",
         }
 
-        response = requests.get("https://api.github.com/user", headers=headers)
+        response = requests.get("https://api.github.com/user/email", headers=headers)
 
         if response.status_code == 200:
             data = response.json()
@@ -135,5 +135,5 @@ def get_user_info(access_token):
 ```
 
 Having the user saved on GitHubs servers is good and all, but we want to have control over that information as well.
-For that we will call the ``add_user`` function which will add this user with his email to our Database. Continue
-reading the next page to learn how
+For that we will call the ``add_user`` function which will save this user to our database. Read the next chapter to 
+learn how
