--- a/main/01_database.mdx
+++ b/main/01_database.mdx
@@ -2,22 +2,22 @@
 title: "Database"
 ---
 
-RDBs (Relational Databases) have been dominating the space since the 80s. Back then the main concern when
-storing data was storage, which is why RDBs are optimized to use up as little space by normalizing data
-to avoid duplication. As you might guess, nowadays storage is not a problem anymore - compute is now the
-major bottleneck. Thats where NoSQL databases like DynamoDB come in. They are:
+RDBs (Relational Databases) have been dominating the space since the 80s. Back then the main concern 
+was storage, which is why RDBs are designed to avoid duplication by normalizing data. 
+As you might guess, compute is now the major bottleneck. 
+Thats where NoSQL databases like DynamoDB come in. They are:
 
-##### 1. faster and more reliable than a RDB
+##### 1. faster and more reliable than RDBs
 NoSQL databases are optimized for speed. You can retrieve items in miliseconds and don't have to use expensive join
 operations.
 
 ##### 2. dirt cheap and scale to the moon
-You can use on-demand pricing or provision a database starting at 0.95$ per month. This can be scaled virtually unlimited
-since the NoSQL database are made to shard and can by that scale horizontaly.
+You can use on-demand pricing or provision a database starting at 0.95$ per month. They can be scaled virtually unlimited
+since sharding allows them to scale horizontaly.
 
-##### 3. are easier to manage 
-DynamoDB is fully managed. You will never have to worry about scaling, provisioning, security, backups, rollbacks, and all
-the stuff that comes along with a self-hosted database. 
+##### 3. easier to use
+DynamoDB is fully managed. You will never have to worry about scaling, provisioning, security, backups, rollbacks, and
+everything else that comes along with a self-hosted database. 
 
 Here is an [awesome post discussing the strenghts and applications of NoSQL databases](https://www.reddit.com/r/aws/comments/11bpfen/comment/ja3itzd/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button)
 
@@ -25,20 +25,20 @@ If this is the first time leaving the world of RDBs, the whole mindset of buildi
 quite confusing. However, getting used to it is definetily worth it.
 Check out [this webinar on modeling data](https://www.youtube.com/watch?v=XMEkNZby95M) before you continue.
 
-Now you need to set up your database. While we could have set it up programmatically in our IAS (Infrastructure
-as Code) Framework SLS, I prefer the peace of mind that you won't accidentaly delete your database when playing around
-with your CLI.
+Now we will set up your database. While we could have done so programmatically in our IAS (Infrastructure
+as Code) template, I prefer not accidentaly delete my database when playing around in the CLI (I am speaking from experience).
 
-For this follow along the steps shown in [this Introduction to DynamoDB](https://www.youtube.com/watch?v=2k2GINpO308)
+For this follow the steps shown in [this Introduction to DynamoDB](https://www.youtube.com/watch?v=2k2GINpO308)
 and manually create a table. Otherwise you can follow [this video](https://www.youtube.com/watch?v=vHeYz-C9hSk&list=PL9nWRykSBSFi5QD8ssI0W5odL9S0309E2&index=12)
-and deploy it locally, you will have to change the code accordangly.
+and deploy it locally, but you will have to change the code accordingly.
 
 Set the primary key as email and leave the search key empty, as this is how we are going to find our users. Also
-add a string property called package_id, more on this later.
+add a string property called ``package_id``, more on this later.
 
 Now lets dive into the code and see how we interact with our database. 
-Open ``db.py`` to see that we establish a connection to our table based on its name, add it to ``.env`` under 
-the "DYNAMO_TABLE_NAME" key.
+Open ``backend/db.py`. 
+As you can see, we establish a connection to our table based on its name, which is saved in an environment variable.
+Add the name you just created to ``.env``.
 
 ```python db.py
 # --- setup Client ---
