--- a/deployment/00_overview.mdx
+++ b/deployment/00_overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Deployment Overview"
+title: "Overview"
 ---
 
-coming soon
+This is work in progress. Currently only the serverless deployment method is complete, check it out!
