reflected change from bun to esbuild/postcss

--- a/intro/00_motivation.mdx
+++ b/intro/00_motivation.mdx
@@ -1,6 +1,12 @@
 ---
 title: "Introduction and Motivation"
 ---
+**
+Please read the entire documentation from start to back. It is only 12 pages and will make sure you will have
+the best experience working with this boilerplate. It is designed to be like a course, read it chapter by chapter
+and you will master this techstack and workflow in no time
+**
+
 ### The problem we have
 In recent years the Web Development landscape has changed drastically: ever newer tools 
 allow for easier and faster shipment of your application. On the forefront: JavaScript.
@@ -22,7 +28,7 @@ are becoming ever more important.
 ### What this offers
 So what is this, and how does it solve these problems?
 This is all the boilerplate you will ever need for a Product, not just a Project. Besides the development
-environment which allows you to quickly develop using Flask, ReactJS and Bun, it has:
+environment which allows you to quickly develop using Flask, ReactJS, ES-build, and PostCSS , it has:
 - a **database**, so you can save users
 - **authentification**, so you can paywall your product
 - **payments**, so they can pay for your product
@@ -34,15 +40,14 @@ both orchestrated Docker containers and serverless Lambda functions are supporte
 
 ### Prerequisites
 What do you need to know before you start? I expect you to be a Flask developer familiar with modern 
-JavaScript: you need to know how package managers and bundling work. Specifically you should know ReactJS
-and optionally (but highly recommend) TailwindCSS. 
-
-Thats it! Throughout this documentation I am going to teach you:
+JavaScript: you need to know how package managers and bundling work. You should also know how Flask, WSGIs and 
+web servers interact under the hood.
+Thats it! Throughout this documentation I am going to teach you and help you setup:
 - what advantages *NoSQL databases* and *DynamoDB* bring
-- how *authentification* works using *OAuth*
+- how *authentification* works using *OAuth* 
 - how to do *payments* using *Stripe*
 - how to deploy to AWS using *Docker* and the *"Serverless Framework"*
 - how to manage *domains* on AWS
-- how to use *React-Mail* to easily style and *SES* to cheaply send emails 
-so you can effectively use and customize this boilerplate. 
+- how to use *SES* to cheaply send emails 
+so you can effectively use and customize this boilerplate with confidence
 
